Feat (index) Add meta propoerties

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Développeur web à Nice - Nathan Bonin</title>
+    <meta name="description" content="Mon portfolio. Je créée et développe des solutions sur-mesure pour faire des internautes vos clients">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     
