--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <section>
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
