Feat (index) Add header items

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <meta name="robots" content="index, follow">
 </head>
 <body>
-    <header>
-
+    <header class="menu">
+        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="">
+        <nav>
+            <ul class="menu-nav">
+                <li><a href="">Services</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">À propos</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
-            
+
         </section>
     </main>
     <footer>
