--- a/index.html
+++ b/index.html
@@ -19,9 +19,20 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-
+    <main class="homepage">
+        <section class="hero">
+            <img class="hero-image" src="" alt="Portrait de Nathan Bonin, développeur web à Nice">
+            <div class="hero-infos">
+                <h1 class="hero-title">Développeur web à Nice</h1>
+                <p class="hero-subtitle">Nathan Bonin</p>
+                <p class="hero-commercial">Création de solutions digitales sur mesure pour transformer vos visiteurs en clients</p>
+                <p class="hero-commercial">Vous avez un projet digital ?</p>
+                <p class="hero-action">Discutons-en dès maintenant</p>
+                <a class="btn hero-btn">Me contacter</a>
+            </div>
+        </section>
+        <section class="Services">
+            <h2></h2>
         </section>
     </main>
     <footer>
