Feat (index) Add services text

--- a/index.html
+++ b/index.html
@@ -28,11 +28,31 @@
                 <p class="hero-commercial">Création de solutions digitales sur mesure pour transformer vos visiteurs en clients</p>
                 <p class="hero-commercial">Vous avez un projet digital ?</p>
                 <p class="hero-action">Discutons-en dès maintenant</p>
-                <a class="btn hero-btn">Me contacter</a>
+                <a class="btn hero-btn" href="">Me contacter</a>
             </div>
         </section>
-        <section class="Services">
-            <h2></h2>
+        <section class="services">
+            <h2>Des expertises au service de votre performance digitale</h2>
+            <div class="services-list">
+                <article class="services-card">
+                    <h3>Déploiement de CRM HubSpot</h3>
+                    <p>Optimisez votre cycle de vente avec une intégration sur mesure de HubSpot. De la configuration initiale à la création de workflows automatisés, bénéficiez d’un accompagnement complet pour structurer votre gestion de la relation client, centraliser vos données et augmenter la productivité de vos équipes commerciales.</p>
+                </article>
+                <article class="services-card">
+                    <h3>Landing pages et formulaires personnalisés</h3>
+                    <p>Maximisez la conversion de vos campagnes SEA, réseaux sociaux et e-mailings grâce à des pages d’atterrissage rapides, responsive et conçues pour convertir. Formulaires dynamiques, questionnaires interactifs et tracking événementiel intégrés pour capturer les leads les plus qualifiés.</p>
+                </article>
+                <article class="services-card">
+                    <h3>Sites vitrines pour PME</h3>
+                    <p>Offrez à votre entreprise une présence digitale professionnelle et performante. Chaque site vitrine est conçu sur mesure, avec un design moderne, une structure SEO-friendly et une prise en main facile pour vous permettre de mettre à jour vos contenus en toute autonomie.</p>
+                </article>                
+            </div>
+        </section>
+        <section class="portfolio">
+            <h2>Derniers projets</h2>
+            <div class="portfolio-list">
+                
+            </div>
         </section>
     </main>
     <footer>
