Feat (index) Add portfolio and about text

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                 <p class="hero-commercial">Création de solutions digitales sur mesure pour transformer vos visiteurs en clients</p>
                 <p class="hero-commercial">Vous avez un projet digital ?</p>
                 <p class="hero-action">Discutons-en dès maintenant</p>
-                <a class="btn hero-btn" href="">Me contacter</a>
+                <a class="btn hero-btn" href="" title="Contacter Nathan Bonin">Me contacter</a>
             </div>
         </section>
         <section class="services">
             <h2>Des expertises au service de votre performance digitale</h2>
             <div class="services-list">
-                <article class="services-card">
+                <article class="card services-card">
                     <h3>Déploiement de CRM HubSpot</h3>
                     <p>Optimisez votre cycle de vente avec une intégration sur mesure de HubSpot. De la configuration initiale à la création de workflows automatisés, bénéficiez d’un accompagnement complet pour structurer votre gestion de la relation client, centraliser vos données et augmenter la productivité de vos équipes commerciales.</p>
                 </article>
-                <article class="services-card">
+                <article class="card services-card">
                     <h3>Landing pages et formulaires personnalisés</h3>
                     <p>Maximisez la conversion de vos campagnes SEA, réseaux sociaux et e-mailings grâce à des pages d’atterrissage rapides, responsive et conçues pour convertir. Formulaires dynamiques, questionnaires interactifs et tracking événementiel intégrés pour capturer les leads les plus qualifiés.</p>
                 </article>
-                <article class="services-card">
+                <article class="card services-card">
                     <h3>Sites vitrines pour PME</h3>
                     <p>Offrez à votre entreprise une présence digitale professionnelle et performante. Chaque site vitrine est conçu sur mesure, avec un design moderne, une structure SEO-friendly et une prise en main facile pour vous permettre de mettre à jour vos contenus en toute autonomie.</p>
                 </article>                
@@ -51,8 +51,80 @@
         <section class="portfolio">
             <h2>Derniers projets</h2>
             <div class="portfolio-list">
-                
+                <article class="card portfolio-card">
+                    <figure class="portolio-card-screenshot">
+                        <img alt="Capture d'écran d'un projet d'intégration de prototype en HTML & CSS" src="">
+                    </figure>
+                    <div class="portfolio-card-content">
+                        <h3>Prototype d’un site de réservation d’hébergements</h3>
+                        <div class="taglist">
+                            <span>HTML</span><span>CSS</span>
+                        </div>
+                        <p>Projet réalisé dans le cadre de la création d’une nouvelle plateforme de réservation d’hébergements et d’activités. Développement d’un prototype de page d’accueil, conformément à une maquette  fournie par une agence de design. Dans ce projet, les éléments sont intégrés en prenant en compte le responsive : les composants s’adaptent à la largeur de l’écran.</p>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                    </div>
+                </article>
+                <article class="card portfolio-card">
+                    <figure class="portolio-card-screenshot">
+                        <img alt="Capture d'écran d'un site interactif développé avec javascript" src="">
+                    </figure>
+                    <div class="portfolio-card-content">
+                        <h3>Site interactif pour une architecte</h3>
+                        <div class="taglist">
+                            <span>HTML</span><span>CSS</span><span>JAVASCRIPT</span><span>API</span>
+                        </div>
+                        <p>Développement du frontend d’un portfolio interactif avec back-office sur mesure pour la gestion autonome des projets. L’interface comprend un formulaire réservé aux collaborateurs de l’architecte leur permettant d’ajouter des projets en toute autonomie. Ce projet a nécessité des connexions au backend du site via des API.</p>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                    </div>
+                </article>
+                <article class="card portfolio-card">
+                    <figure class="portolio-card-screenshot">
+                        <img alt="Capture d'écran d'un projet d'optimisation du SEO et de l'accessibilité" src="">
+                    </figure>
+                    <div class="portfolio-card-content">
+                        <h3>Refonte SEO & accessibilité d’un site de photographe</h3>
+                        <div class="taglist">
+                            <span>SEO</span><span>ACCESSIBILITÉ NUMÉRIQUE</span><span>GREENCODE</span>
+                        </div>
+                        <p>Audit complet, optimisation technique (balises, performances, structure HTML),mise en conformité avec les normes WCAG (Recommandations d’accessibilité pour les contenus web) pour améliorer l’accessibilité et optimisations pour le référencement naturel (SEO). Des mesures pour rendre le site plus respectueux de l’environnement ont été prises comme le formatage des images et la minification des fichiers.</p>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                    </div>
+                </article>                                  
             </div>
+        </section>
+        <section class="about">
+            <h2>Votre prestataire en développement web à Nice</h2>
+            <p class="about-description">Ancien responsable web marketing, aujourd’hui développeur web à Nice, j’allie expertise technique et vision stratégique pour concevoir des solutions digitales centrées sur la performance.</p>
+            <p class="about-description">Grâce à une solide expérience en acquisition de clients et en gestion de projets, je suis en mesure de vous accompagner sur l’ensemble du cycle de production, de la réflexion initiale à la mise en ligne.</p>
+            <div class="about-curriculum">
+                <h3>Diplômes</h3>
+                <div class="about-item">
+                    <div>
+                        <p class="about-diploma">Expert en Management des Systèmes d’Information</p>
+                        <p class="about-school">En préparation, Epitech</p>                        
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div>
+                        <p class="about-diploma">Développeur Web</p>
+                        <p class="about-school">2025, Open Classrooms</p>                        
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div>
+                        <p class="about-diploma">Marketing et Communication Digitale</p>
+                        <p class="about-school">2019, École W</p>
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div>
+                        <p class="about-diploma">Communication et Relations Presse</p>
+                        <p class="about-school">2019, École W</p>                        
+                    </div>
+                </div>
+            </div>
+            <p class="about-action">Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
+            <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin</a>
         </section>
     </main>
     <footer>
