--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
             <p class="about-action">Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
             <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin</a>
         </section>
+        <section class="contact">
+            <h2>Contactez-moi</h2>
+            <form method="post" id="contactForm" action="">
+                <label for="name">Votre nom</label>
+                <input type="text" id="name" placeholder="Écrivez votre nom ici" required="true">
+                <label for="email">Votre adresse e-mail</label>
+                <input type="email" id="email" placeholder="Écrivez votre adresse mail ici" required="true">
+                <label for="tel">Votre numéro de téléphone</label>
+                <input type="tel" id="tel" placeholder="Écrivez votre numéro ici" required="true">
+                <label for="message">Votre message</label>
+                <textarea id="message">Écrivez votre message ici</textarea>
+                <input type="submit" value="Envoyer le message">
+            </form>
+        </section>
     </main>
     <footer>
 
