Feat (index) Add logos in header & footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="menu">
-        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="">
+        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-color.svg">
         <nav>
             <ul class="menu-nav">
                 <li><a href="">Services</a></li>
@@ -150,7 +150,7 @@
         </section>
     </main>
     <footer class="credits">
-        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="">
+        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-grey.svg">
         <p class="credits-text">Nathan Bonin, tous droits réservés</p>
     </footer>
 </body>
