Build (front) Add portrait

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main class="homepage">
         <section class="hero">
-            <img class="hero-image" src="" alt="Portrait de Nathan Bonin, développeur web à Nice">
+            <img class="hero-image" src="./images/portrait-nathan-bonin.webp" alt="Portrait de Nathan Bonin, développeur web à Nice">
             <div class="hero-infos">
                 <h1 class="hero-title">Développeur web à Nice</h1>
                 <p class="hero-subtitle">Nathan Bonin</p>
