--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="portfolio-list">
                 <article class="card portfolio-card">
                     <figure class="portolio-card-screenshot">
-                        <img alt="Capture d'écran d'un projet d'intégration de prototype en HTML & CSS" src="">
+                        <img alt="Capture d'écran d'un projet d'intégration de prototype en HTML & CSS" src="./images/site-hebergement.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Prototype d’un site de réservation d’hébergements</h3>
@@ -66,7 +66,7 @@
                 </article>
                 <article class="card portfolio-card">
                     <figure class="portolio-card-screenshot">
-                        <img alt="Capture d'écran d'un site interactif développé avec javascript" src="">
+                        <img alt="Capture d'écran d'un site interactif développé avec javascript" src="./images/site-architecte.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Site interactif pour une architecte</h3>
@@ -79,7 +79,7 @@
                 </article>
                 <article class="card portfolio-card">
                     <figure class="portolio-card-screenshot">
-                        <img alt="Capture d'écran d'un projet d'optimisation du SEO et de l'accessibilité" src="">
+                        <img alt="Capture d'écran d'un projet d'optimisation du SEO et de l'accessibilité" src="./images/site-photographe.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Refonte SEO & accessibilité d’un site de photographe</h3>
