Build (frontend) Add more section images

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </form>
         </section>
         <section class="local">
-            <img class="local-image" src="" alt="Ecosystème tech à Nice">
+            <img class="local-image" src="./images/ecosysteme-nice.webp" alt="Ecosystème tech à Nice">
             <div class="local-infos">
                 <h2>Travailler avec un développeur web à Nice : un atout stratégique</h2>
                 <p>Nice s’impose aujourd’hui comme un pôle dynamique dans le secteur numérique. Avec la présence d’incubateurs innovants, d’événements tech réguliers et un tissu économique en pleine croissance, l’écosystème niçois favorise l’émergence de projets digitaux à fort impact.</p>
