Build (front) Add CSS reset

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Développeur web à Nice - Nathan Bonin</title>
     <meta name="description" content="Mon portfolio. Je créée et développe des solutions sur-mesure pour faire des internautes vos clients">
     <meta name="robots" content="index, follow">
+    <!--Stylesheets below-->
+    <link href="./style/reset.css" rel="stylesheet" />
 </head>
 <body>
     <header class="menu">
