Build (front) Add vars

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="index, follow">
     <!--Stylesheets below-->
     <link href="./style/reset.css" rel="stylesheet" />
+    <link href="./style/style.css" rel="stylesheet" />
 </head>
 <body>
     <header class="menu">
