Style (front) Add default style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Développeur web à Nice - Nathan Bonin</title>
     <meta name="description" content="Mon portfolio. Je créée et développe des solutions sur-mesure pour faire des internautes vos clients">
     <meta name="robots" content="index, follow">
+    <!--Loading fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poetsen+One&display=swap" rel="stylesheet">
     <!--Stylesheets below-->
     <link href="./style/reset.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" />
