Style (front) Add header style

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <!--Stylesheets below-->
     <link href="./style/reset.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" />
+    <link href="./style/header.css" rel="stylesheet" />
 </head>
 <body>
-    <header class="menu">
-        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-color.svg">
-        <nav>
-            <ul class="menu-nav">
-                <li><a href="">Services</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">À propos</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+    <header>
+        <div class="menu">
+            <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-color.svg">
+            <nav>
+                <ul class="menu-nav">
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">À propos</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="homepage">
         <section class="hero">
