Style (front) Add hero style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="./style/reset.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" />
     <link href="./style/header.css" rel="stylesheet" />
+    <link href="./style/index.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
             </nav>
         </div>
     </header>
-    <main class="homepage">
+    <main>
         <section class="hero">
             <img class="hero-image" src="./images/portrait-nathan-bonin.webp" alt="Portrait de Nathan Bonin, développeur web à Nice">
             <div class="hero-infos">
