--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-color.svg">
             <nav>
                 <ul class="menu-nav">
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">À propos</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="" class="menu-link">Services</a></li>
+                    <li><a href="" class="menu-link">Portfolio</a></li>
+                    <li><a href="" class="menu-link">À propos</a></li>
+                    <li><a href="" class="menu-contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +39,7 @@
                 <p class="hero-commercial">Création de solutions digitales sur mesure pour transformer vos visiteurs en clients</p>
                 <p class="hero-commercial">Vous avez un projet digital ?</p>
                 <p class="hero-action">Discutons-en dès maintenant</p>
-                <a class="btn hero-btn" href="" title="Contacter Nathan Bonin">Me contacter</a>
+                <a class="btn hero-btn contact-btn" href="" title="Contacter Nathan Bonin">Me contacter</a>
             </div>
         </section>
         <section class="services">
@@ -47,15 +47,18 @@
             <div class="services-list">
                 <article class="card services-card">
                     <h3>Déploiement de CRM HubSpot</h3>
-                    <p>Optimisez votre cycle de vente avec une intégration sur mesure de HubSpot. De la configuration initiale à la création de workflows automatisés, bénéficiez d’un accompagnement complet pour structurer votre gestion de la relation client, centraliser vos données et augmenter la productivité de vos équipes commerciales.</p>
+                    <p>Optimisez votre cycle de vente avec une intégration sur mesure de HubSpot.</p> 
+                    <p>Bénéficiez d’un accompagnement complet pour structurer votre gestion de la relation client, centraliser vos données et augmenter la productivité de vos équipes commerciales.</p>
                 </article>
                 <article class="card services-card">
                     <h3>Landing pages et formulaires personnalisés</h3>
-                    <p>Maximisez la conversion de vos campagnes SEA, réseaux sociaux et e-mailings grâce à des pages d’atterrissage rapides, responsive et conçues pour convertir. Formulaires dynamiques, questionnaires interactifs et tracking événementiel intégrés pour capturer les leads les plus qualifiés.</p>
+                    <p>Maximisez la conversion de vos campagnes SEA, réseaux sociaux et e-mailings grâce à des pages d’atterrissage conçues pour convertir.</p> 
+                    <p>Formulaires dynamiques, questionnaires interactifs et tracking événementiel intégrés pour capturer les leads les plus qualifiés.</p>
                 </article>
                 <article class="card services-card">
                     <h3>Sites vitrines pour PME</h3>
-                    <p>Offrez à votre entreprise une présence digitale professionnelle et performante. Chaque site vitrine est conçu sur mesure, avec un design moderne, une structure SEO-friendly et une prise en main facile pour vous permettre de mettre à jour vos contenus en toute autonomie.</p>
+                    <p>Offrez à votre entreprise une présence digitale professionnelle et performante. </p>
+                    <p>Chaque site vitrine est conçu sur mesure, avec un design moderne, une structure SEO-friendly et une prise en main facile pour vous permettre de mettre à jour vos contenus en toute autonomie.</p>
                 </article>                
             </div>
         </section>
@@ -63,41 +66,46 @@
             <h2>Derniers projets</h2>
             <div class="portfolio-list">
                 <article class="card portfolio-card">
-                    <figure class="portolio-card-screenshot">
+                    <figure class="portfolio-card-screenshot">
                         <img alt="Capture d'écran d'un projet d'intégration de prototype en HTML & CSS" src="./images/site-hebergement.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Prototype d’un site de réservation d’hébergements</h3>
-                        <div class="taglist">
-                            <span>HTML</span><span>CSS</span>
-                        </div>
-                        <p>Projet réalisé dans le cadre de la création d’une nouvelle plateforme de réservation d’hébergements et d’activités. Développement d’un prototype de page d’accueil, conformément à une maquette  fournie par une agence de design. Dans ce projet, les éléments sont intégrés en prenant en compte le responsive : les composants s’adaptent à la largeur de l’écran.</p>
+                        <ul class="taglist">
+                            <li>HTML</li><li>CSS</li>
+                        </ul>
+                        <p>Projet réalisé dans le cadre de la création d’une nouvelle plateforme de réservation d’hébergements et d’activités.</p> 
+                        <p>Développement d’un prototype de page d’accueil, conformément à une maquette  fournie par une agence de design.</p>
+                        <p>Dans ce projet, les éléments sont intégrés en prenant en compte le responsive : les composants s’adaptent à la largeur de l’écran.</p>
                         <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
-                    <figure class="portolio-card-screenshot">
+                    <figure class="portfolio-card-screenshot">
                         <img alt="Capture d'écran d'un site interactif développé avec javascript" src="./images/site-architecte.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Site interactif pour une architecte</h3>
-                        <div class="taglist">
-                            <span>HTML</span><span>CSS</span><span>JAVASCRIPT</span><span>API</span>
-                        </div>
-                        <p>Développement du frontend d’un portfolio interactif avec back-office sur mesure pour la gestion autonome des projets. L’interface comprend un formulaire réservé aux collaborateurs de l’architecte leur permettant d’ajouter des projets en toute autonomie. Ce projet a nécessité des connexions au backend du site via des API.</p>
+                        <ul class="taglist">
+                            <li>HTML</li><li>CSS</li><li>JAVASCRIPT</li><li>API</li>
+                        </ul>
+                        <p>Développement du frontend d’un portfolio interactif avec back-office sur mesure pour la gestion autonome des projets. </p>
+                        <p>L’interface comprend un formulaire réservé aux collaborateurs de l’architecte leur permettant d’ajouter des projets en toute autonomie.</p>
+                        <p>Ce projet a nécessité des connexions au backend du site via des API.</p>
                         <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
-                    <figure class="portolio-card-screenshot">
+                    <figure class="portfolio-card-screenshot">
                         <img alt="Capture d'écran d'un projet d'optimisation du SEO et de l'accessibilité" src="./images/site-photographe.webp">
                     </figure>
                     <div class="portfolio-card-content">
                         <h3>Refonte SEO & accessibilité d’un site de photographe</h3>
-                        <div class="taglist">
-                            <span>SEO</span><span>ACCESSIBILITÉ NUMÉRIQUE</span><span>GREENCODE</span>
-                        </div>
-                        <p>Audit complet, optimisation technique (balises, performances, structure HTML),mise en conformité avec les normes WCAG (Recommandations d’accessibilité pour les contenus web) pour améliorer l’accessibilité et optimisations pour le référencement naturel (SEO). Des mesures pour rendre le site plus respectueux de l’environnement ont été prises comme le formatage des images et la minification des fichiers.</p>
+                        <ul class="taglist">
+                            <li>SEO</li><li>ACCESSIBILITÉ NUMÉRIQUE</li><li>GREENCODE</li>
+                        </ul>
+                        <p>Audit complet, optimisation technique (balises, performances, structure HTML),mise en conformité avec les normes WCAG (Recommandations d’accessibilité pour les contenus web) pour améliorer l’accessibilité et optimisations pour le référencement naturel (SEO). </p>
+                        <p>Des mesures pour rendre le site plus respectueux de l’environnement ont été prises comme le formatage des images et la minification des fichiers.</p>
                         <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
                     </div>
                 </article>                                  
