Style (front) Add about styles

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
         </section>
         <section class="about">
             <h2>Votre prestataire en développement web à Nice</h2>
-            <p class="about-description">Ancien responsable web marketing, aujourd’hui développeur web à Nice, j’allie expertise technique et vision stratégique pour concevoir des solutions digitales centrées sur la performance.</p>
-            <p class="about-description">Grâce à une solide expérience en acquisition de clients et en gestion de projets, je suis en mesure de vous accompagner sur l’ensemble du cycle de production, de la réflexion initiale à la mise en ligne.</p>
+            <div class="about-description">
+                <p>Ancien responsable web marketing, aujourd’hui développeur web à Nice, j’allie expertise technique et vision stratégique pour concevoir des solutions digitales centrées sur la performance.</p>
+                <p>Grâce à une solide expérience en acquisition de clients et en gestion de projets, je suis en mesure de vous accompagner sur l’ensemble du cycle de production, de la réflexion initiale à la mise en ligne.</p>
+            </div>
             <div class="about-curriculum">
                 <h3>Diplômes</h3>
                 <div class="about-item">
@@ -141,9 +143,12 @@
                         <p class="about-school">2019, École W</p>                        
                     </div>
                 </div>
+ 
             </div>
-            <p class="about-action">Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
-            <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin</a>
+            <div class="about-action">
+                <p>Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
+                <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin</a>                 
+            </div>                    
         </section>
         <section class="contact">
             <h2>Contactez-moi</h2>
