Style (front) Add contact form style

--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
         </section>
         <section class="contact">
             <h2>Contactez-moi</h2>
-            <form method="post" id="contactForm" action="">
+            <form method="post" id="contactForm" action="" class="card contact-card">
                 <label for="name">Votre nom</label>
-                <input type="text" id="name" placeholder="Écrivez votre nom ici" required="true">
+                <input class="contact-input" type="text" id="name" placeholder="Écrivez votre nom ici" required="true">
                 <label for="email">Votre adresse e-mail</label>
-                <input type="email" id="email" placeholder="Écrivez votre adresse mail ici" required="true">
+                <input class="contact-input" type="email" id="email" placeholder="Écrivez votre adresse mail ici" required="true">
                 <label for="tel">Votre numéro de téléphone</label>
-                <input type="tel" id="tel" placeholder="Écrivez votre numéro ici" required="true">
+                <input class="contact-input" type="tel" id="tel" placeholder="Écrivez votre numéro ici" required="true">
                 <label for="message">Votre message</label>
-                <textarea id="message">Écrivez votre message ici</textarea>
-                <input type="submit" value="Envoyer le message">
+                <textarea class="contact-input" id="message">Écrivez votre message ici</textarea>
+                <input class="btn btn-form" type="submit" value="Envoyer le message">
             </form>
         </section>
         <section class="local">
