Style (front) Add local section style

--- a/index.html
+++ b/index.html
@@ -167,15 +167,18 @@
         <section class="local">
             <img class="local-image" src="./images/ecosysteme-nice.webp" alt="Ecosystème tech à Nice">
             <div class="local-infos">
-                <h2>Travailler avec un développeur web à Nice : un atout stratégique</h2>
+                <h2>Travailler avec un développeur web à Nice : un atout stratégique</h2>
                 <p>Nice s’impose aujourd’hui comme un pôle dynamique dans le secteur numérique. Avec la présence d’incubateurs innovants, d’événements tech réguliers et un tissu économique en pleine croissance, l’écosystème niçois favorise l’émergence de projets digitaux à fort impact.</p>
-                <p>Faire appel à un développeur web à Nice, c’est bénéficier d’une proximité géographique, d’une réactivité optimale, et d’un réseau local solide. C’est aussi choisir un prestataire qui comprend les enjeux spécifiques des entreprises régionales, de la la petite entreprise artisanale à la PME en pleine croissance.</p>
+                <p>Faire appel à un développeur web à Nice, c’est bénéficier d’une proximité géographique, d’une réactivité optimale, et d’un réseau local solide. </p>
+                <p>C’est aussi choisir un prestataire qui comprend les enjeux spécifiques des entreprises régionales, de la la petite entreprise artisanale à la PME en pleine croissance.</p>
             </div>
         </section>
     </main>
-    <footer class="credits">
-        <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-grey.svg">
-        <p class="credits-text">Nathan Bonin, tous droits réservés</p>
+    <footer>
+        <div class="credits">
+            <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-grey.svg">
+            <p class="credits-text">Nathan Bonin, tous droits réservés</p>            
+        </div>
     </footer>
 </body>
 </html>
