Style (front) Add footer style

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="./style/style.css" rel="stylesheet" />
     <link href="./style/header.css" rel="stylesheet" />
     <link href="./style/index.css" rel="stylesheet" />
+    <link href="./style/footer.css" rel="stylesheet" />    
 </head>
 <body>
     <header>
@@ -176,7 +177,7 @@
     </main>
     <footer>
         <div class="credits">
-            <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-grey.svg">
+            <img class="credits-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-grey.svg">
             <p class="credits-text">Nathan Bonin, tous droits réservés</p>            
         </div>
     </footer>
