Build (frontend) Add icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poetsen+One&display=swap" rel="stylesheet">
+    <!--Loading icons-->
+    <script src="https://kit.fontawesome.com/43fc7e11e0.js" crossorigin="anonymous"></script>
     <!--Stylesheets below-->
     <link href="./style/reset.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" />
@@ -47,16 +49,19 @@
             <h2>Des expertises au service de votre performance digitale</h2>
             <div class="services-list">
                 <article class="card services-card">
+                    <i class="fa-brands fa-hubspot services-icon"></i>
                     <h3>Déploiement de CRM HubSpot</h3>
                     <p>Optimisez votre cycle de vente avec une intégration sur mesure de HubSpot.</p> 
                     <p>Bénéficiez d’un accompagnement complet pour structurer votre gestion de la relation client, centraliser vos données et augmenter la productivité de vos équipes commerciales.</p>
                 </article>
                 <article class="card services-card">
+                    <i class="fa-solid fa-envelope services-icon"></i> 
                     <h3>Landing pages et formulaires personnalisés</h3>
                     <p>Maximisez la conversion de vos campagnes SEA, réseaux sociaux et e-mailings grâce à des pages d’atterrissage conçues pour convertir.</p> 
                     <p>Formulaires dynamiques, questionnaires interactifs et tracking événementiel intégrés pour capturer les leads les plus qualifiés.</p>
                 </article>
                 <article class="card services-card">
+                    <i class="fa-solid fa-display services-icon"></i>
                     <h3>Sites vitrines pour PME</h3>
                     <p>Offrez à votre entreprise une présence digitale professionnelle et performante. </p>
                     <p>Chaque site vitrine est conçu sur mesure, avec un design moderne, une structure SEO-friendly et une prise en main facile pour vous permettre de mettre à jour vos contenus en toute autonomie.</p>
@@ -78,7 +83,7 @@
                         <p>Projet réalisé dans le cadre de la création d’une nouvelle plateforme de réservation d’hébergements et d’activités.</p> 
                         <p>Développement d’un prototype de page d’accueil, conformément à une maquette  fournie par une agence de design.</p>
                         <p>Dans ce projet, les éléments sont intégrés en prenant en compte le responsive : les composants s’adaptent à la largeur de l’écran.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
@@ -93,7 +98,7 @@
                         <p>Développement du frontend d’un portfolio interactif avec back-office sur mesure pour la gestion autonome des projets. </p>
                         <p>L’interface comprend un formulaire réservé aux collaborateurs de l’architecte leur permettant d’ajouter des projets en toute autonomie.</p>
                         <p>Ce projet a nécessité des connexions au backend du site via des API.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
@@ -107,7 +112,7 @@
                         </ul>
                         <p>Audit complet, optimisation technique (balises, performances, structure HTML),mise en conformité avec les normes WCAG (Recommandations d’accessibilité pour les contenus web) pour améliorer l’accessibilité et optimisations pour le référencement naturel (SEO). </p>
                         <p>Des mesures pour rendre le site plus respectueux de l’environnement ont été prises comme le formatage des images et la minification des fichiers.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet</a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>                                  
             </div>
@@ -121,26 +126,30 @@
             <div class="about-curriculum">
                 <h3>Diplômes</h3>
                 <div class="about-item">
+                    <i class="fa-solid fa-sitemap about-icon"></i>
                     <div>
-                        <p class="about-diploma">Expert en Management des Systèmes d’Information</p>
+                        <p class="about-diploma">Expert en management des systèmes d’information</p>
                         <p class="about-school">En préparation, Epitech</p>                        
                     </div>
                 </div>
                 <div class="about-item">
+                    <i class="fa-solid fa-code about-icon"></i>
                     <div>
-                        <p class="about-diploma">Développeur Web</p>
+                        <p class="about-diploma">Développeur web</p>
                         <p class="about-school">2025, Open Classrooms</p>                        
                     </div>
                 </div>
                 <div class="about-item">
+                    <i class="fa-solid fa-shop about-icon"></i>
                     <div>
-                        <p class="about-diploma">Marketing et Communication Digitale</p>
+                        <p class="about-diploma">Marketing et communication digitale</p>
                         <p class="about-school">2019, École W</p>
                     </div>
                 </div>
                 <div class="about-item">
+                    <i class="fa-solid fa-bullhorn about-icon"></i>
                     <div>
-                        <p class="about-diploma">Communication et Relations Presse</p>
+                        <p class="about-diploma">Communication et relations presse</p>
                         <p class="about-school">2019, École W</p>                        
                     </div>
                 </div>
@@ -148,7 +157,7 @@
             </div>
             <div class="about-action">
                 <p>Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
-                <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin</a>                 
+                <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin <i class="fa-solid fa-arrow-up-right-from-square new-tab new-tab"></i></a>                 
             </div>                    
         </section>
         <section class="contact">
