Feat (index) Add anchor link

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <img class="menu-logo" alt="Logo de Nathan Bonin, développeur web à Nice" src="./logo/logo-color.svg">
             <nav>
                 <ul class="menu-nav">
-                    <li><a href="" class="menu-link">Services</a></li>
-                    <li><a href="" class="menu-link">Portfolio</a></li>
-                    <li><a href="" class="menu-link">À propos</a></li>
-                    <li><a href="" class="menu-contact">Contact</a></li>
+                    <li><a href="#services" class="menu-link">Services</a></li>
+                    <li><a href="#portfolio" class="menu-link">Portfolio</a></li>
+                    <li><a href="#about" class="menu-link">À propos</a></li>
+                    <li><a href="#contact" class="menu-contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,10 +42,10 @@
                 <p class="hero-commercial">Création de solutions digitales sur mesure pour transformer vos visiteurs en clients</p>
                 <p class="hero-commercial">Vous avez un projet digital ?</p>
                 <p class="hero-action">Discutons-en dès maintenant</p>
-                <a class="btn hero-btn contact-btn" href="" title="Contacter Nathan Bonin">Me contacter</a>
+                <a class="btn hero-btn contact-btn" href="#contact" title="Contacter Nathan Bonin">Me contacter</a>
             </div>
         </section>
-        <section class="services">
+        <section class="services" id="services">
             <h2>Des expertises au service de votre performance digitale</h2>
             <div class="services-list">
                 <article class="card services-card">
@@ -68,7 +68,7 @@
                 </article>                
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <h2>Derniers projets</h2>
             <div class="portfolio-list">
                 <article class="card portfolio-card">
@@ -117,7 +117,7 @@
                 </article>                                  
             </div>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <h2>Votre prestataire en développement web à Nice</h2>
             <div class="about-description">
                 <p>Ancien responsable web marketing, aujourd’hui développeur web à Nice, j’allie expertise technique et vision stratégique pour concevoir des solutions digitales centrées sur la performance.</p>
@@ -160,7 +160,7 @@
                 <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin <i class="fa-solid fa-arrow-up-right-from-square new-tab new-tab"></i></a>                 
             </div>                    
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
             <h2>Contactez-moi</h2>
             <form method="post" id="contactForm" action="" class="card contact-card">
                 <label for="name">Votre nom</label>
