Feat (index) Add external links

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <p>Projet réalisé dans le cadre de la création d’une nouvelle plateforme de réservation d’hébergements et d’activités.</p> 
                         <p>Développement d’un prototype de page d’accueil, conformément à une maquette  fournie par une agence de design.</p>
                         <p>Dans ce projet, les éléments sont intégrés en prenant en compte le responsive : les composants s’adaptent à la largeur de l’écran.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="https://n-bon.github.io/oc-booki-03-2025/" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
@@ -98,7 +98,7 @@
                         <p>Développement du frontend d’un portfolio interactif avec back-office sur mesure pour la gestion autonome des projets. </p>
                         <p>L’interface comprend un formulaire réservé aux collaborateurs de l’architecte leur permettant d’ajouter des projets en toute autonomie.</p>
                         <p>Ce projet a nécessité des connexions au backend du site via des API.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="https://github.com/n-bon/oc-sophie-bluel/tree/master/FrontEnd" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>
                 <article class="card portfolio-card">
@@ -112,7 +112,7 @@
                         </ul>
                         <p>Audit complet, optimisation technique (balises, performances, structure HTML),mise en conformité avec les normes WCAG (Recommandations d’accessibilité pour les contenus web) pour améliorer l’accessibilité et optimisations pour le référencement naturel (SEO). </p>
                         <p>Des mesures pour rendre le site plus respectueux de l’environnement ont été prises comme le formatage des images et la minification des fichiers.</p>
-                        <a class="btn portfolio-card-btn" target="_blank" href="" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
+                        <a class="btn portfolio-card-btn" target="_blank" href="https://n-bon.github.io/oc-nina-carducci/" title="Ouvrir le projet dans un nouvel onglet">Voir le projet <i class="fa-solid fa-arrow-up-right-from-square new-tab"></i></a>
                     </div>
                 </article>                                  
             </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="about-action">
                 <p>Pour en savoir plus sur mon parcours et suivre mes actualités professionnelles, abonnez-vous à mon profil Linkedin :</p>
-                <a class="btn btn-about" target="_blank" href="" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin <i class="fa-solid fa-arrow-up-right-from-square new-tab new-tab"></i></a>                 
+                <a class="btn btn-about" target="_blank" href="https://www.linkedin.com/in/nathan-bonin/" title="Ouvrir le profil Linkedin de Nathan Bonin">Voir mon profil Linkedin <i class="fa-solid fa-arrow-up-right-from-square new-tab new-tab"></i></a>                 
             </div>                    
         </section>
         <section class="contact" id="contact">
