--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link href="./style/style.css" rel="stylesheet" />
     <link href="./style/header.css" rel="stylesheet" />
     <link href="./style/index.css" rel="stylesheet" />
-    <link href="./style/footer.css" rel="stylesheet" />    
+    <link href="./style/footer.css" rel="stylesheet" />  
+    <!--Favicon-->  
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 <body>
     <header>
