--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="./style/reset.css" rel="stylesheet" />
     <link href="./style/style.css" rel="stylesheet" />
     <link href="./style/header.css" rel="stylesheet" />
-    <link href="./style/index.css" rel="stylesheet" />
+    <link href="./style/main.css" rel="stylesheet" />
     <link href="./style/footer.css" rel="stylesheet" />  
     <!--Favicon-->  
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
